# pudl-output-differ

./: Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: build.yml  compare.yml
src/pudl_output_differ/: cli.py  files.py  gcs_vfs.py  parquet.py  sqlite.py  task_queue.py  types.py
tests/: sqlite_test.py  types_test.py
